--- a/assets/style.css
+++ b/assets/style.css
@@ -711,7 +711,7 @@
             padding: 0;
             margin: 0;
             
-                  background-image: url('/images/banner\ new\ p.jpg'); 
+                  background-image: url('/img/slider22.jpg'); 
             background-size: cover;
             background-position: center;
             position: relative; 
