--- a/assets/style.css
+++ b/assets/style.css
@@ -46,7 +46,7 @@
         /* --- Hero Section --- */
         .hero-section{
 
-            background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), url(/images/banner.jpg);
+            background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)), url(/images/hero.jpg);
             background-size: cover;
             background-position: center;
             height: 100vh;
